# ChainMiner

./: .claudiaideconfig  .gitignore  .gitmodules  CMakeLists.txt  ChainMiner.sln  README.md  generate_lib.bat  tooth.json
.github/workflows/: build.yml  cmake-build.yml  updateSDK.xml
ChainMiner/: BlockUtil.hpp  ChainMiner.aps  ChainMiner.vcxproj  ChainMiner.vcxproj.filters  Command.cpp  Config.cpp  Config.h  Economic.cpp  Economic.h  Global.h  LLMoney.cpp  PlayerSetting.cpp  PlayerSetting.h  PlayerSetting.hpp  Plugin.cpp  Plugin.h  Utils.cpp  Utils.h  Utils.hpp  Version.h  dllmain.cpp  pch.h
Lib/: bedrock_server_api.lib.REMOVED.git-id
SDK/Lib/: LLMoney.lib
docs/en-US/: compatibility.md
docs/zh-CN/: compatibility.md
src/: ChainMiner.vcxproj  ChainMiner.vcxproj.filters  Command.cpp  Config.cpp  Config.h  Global.h  Hook.cpp  LLMoney.h  Plugin.cpp  Plugin.h  Version.h  cpp.hint  dllmain.cpp  pch.h  resource.h
